# spssFiniteVolumeMethods

./: CMakeLists.txt  Definitions.cpp  Definitions.hpp  main  main.cpp
ControlEngines/: InitialConditions.hpp  SimulationEngine.cpp  SimulationEngine.hpp  SimulationEnginePtr.cpp  SimulationEnginePtr.hpp  SimulationEngineRandomPtr.cpp  SimulationEngineRandomPtr.hpp
DynamicalSystems/: DynSysSplitting.cpp  DynSysSplitting.hpp  DynSysSplittingFast.cpp  DynSysSplittingFast.hpp  DynSysSplittingFastPtr.cpp  DynSysSplittingFastPtr.hpp  DynSysSplittingPtr.cpp  DynSysSplittingPtr.hpp  DynSysSplittingRandomPtr.cpp  DynSysSplittingRandomPtr.hpp
FourierTransforms/: Convolution.cpp  Convolution.hpp  FastDiscreteInverseFourierTransform.cpp  FastDiscreteInverseFourierTransform.hpp
Observers/: BinaryObserver.cpp  BinaryObserver.hpp  BinaryObserverPtr.cpp  BinaryObserverPtr.hpp
Parallelization/: Parallelization.cpp  Parallelization.hpp  Thread.cpp  Thread.hpp  ThreadOmegaSharedMemory.cpp  ThreadOmegaSharedMemory.hpp  ThreadRandom.cpp  ThreadRandom.hpp
Steppers/: RungeKutta2StepperWithSplitting.cpp  RungeKutta2StepperWithSplitting.hpp  RungeKutta2StepperWithSplittingPtr.cpp  RungeKutta2StepperWithSplittingPtr.hpp
